# Ibob

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .xgit.cspell.txt  README.md  cspell.config.yaml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  issue_template.md  pull_request_template.md
.github/workflows/: test-poetry-xontrib.yml  test.yml
iBob/: __init__.py  bstring.py
tests/: README.md  conftest.py  test_cmds.py  test_command.py  test_context.py  test_display.py  test_invoker.py  test_path.py  test_proxy.py  test_table.py  test_to_json.py  test_vars.py  test_xgit.py  test_xontrib.py  zip_repo.py
tests/impure/: README.md  conftest.py  test_display.py  test_xgit.py  test_xontrib.py
tests/pure/: README.md  conftest.py  test_invoker.py  test_table.py
tests/with_repo/: conftest.py  test_worktree.py
xontrib/: xgit.py
xontrib-ibob/: LICENSE  README.md  pyproject.toml
xontrib-ibob/.github/workflows/: test.yml
xontrib-ibob/tests/: test_xontrib.py
xontrib-ibob/xontrib/: ibob.py
xontrib-xgit/: .gitignore  README.md  pyproject.toml
xontrib-xgit/tests/: test_xontrib.py
xontrib/xgit/: __init__.py  context.py  context_types.py  conversion_mgr.py  decorators.py  display.py  entries.py  entry_types.py  git_cmd.py  git_path.py  git_types.py  identity_set.py  invoker.py  json_types.py  main.py  multiview.py  object_types.py  object_types_base.py  objects.py  person.py  procs.py  proxy.py  proxy_json.py  ref.py  ref_types.py  repository.py  runners.py  table.py  to_json.py  type_aliases.py  type_aliases_310.py  types.py  utils.py  vars.py  view.py  worktree.py  xgit.py  xgit_cd.py  xgit_context.py  xgit_decorators.py  (+9 more)
(+17 files in other folders)
