
[tool.poetry]
name = "xontrib-ibob"
version = "0.0.1"
description = "Git exploration utilities, mostly."
authors = ["Bob Kerns <1154903+BobKerns@users.noreply.github.com>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/BobKerns/xontrib-ibob"
keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python :: 3",
]
    
packages = [{ include = "xontrib" }]





[tool.poetry.urls]

Homepage = "https://github.com/BobKerns/xontrib-ibob"
Documentation = "https://github.com/BobKerns/xontrib-ibob/blob/master/README.md"
Code = "https://github.com/BobKerns/xontrib-ibob"
"Issue tracker" = "https://github.com/BobKerns/xontrib-ibob/issues"


[tool.poetry.dependencies]
python = ">=3.8"
xonsh = ">=0.12.5"



[tool.poetry.dev-dependencies]
pytest = ">=7.0"



[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''

[tool.ruff]
select = [
    "E",
    "F",
    "B", # flake8-bugbear
    "I", # isort
    "UP", # pyupgrade
    "SIM", # simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff specific rules
]
